--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,19 +66,21 @@ jobs:
 
       # Step 9️⃣: Build and Publish Docker Image 🐳
       # TODO: put it after PyPi
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USERNAME }}  # DockerHub username
+          password: ${{ secrets.DOCKER_API_KEY }} # DockerHub API key (used as password)
+
       - name: 📦 Build and Push Docker Image
 #        if: github.ref == 'refs/heads/main' # Only publish Docker images on main branch
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
-          context: . # Specify the build context
-          file: ./Dockerfile # Path to the Dockerfile
-          push: true # Push the built image to DockerHub
+          push: true
           tags: |
             haimkastner/connectivity-tool:1.0.1
             haimkastner/connectivity-tool:latest
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }} # DockerHub username
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_API_KEY }} # DockerHub API key (used as password)
+          context: .
 
 
       # Step 8️⃣: Publish to PyPI 📦
