--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -69,7 +69,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USERNAME }}  # DockerHub username
+          username: ${{ secrets.DOCKER_USERNAME }}  # DockerHub username
           password: ${{ secrets.DOCKER_API_KEY }} # DockerHub API key (used as password)
 
       - name: 📦 Build and Push Docker Image
