--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -79,18 +79,18 @@ jobs:
 
       # Step 9️⃣: Build and Publish Docker Image 🐳
       - name: Login to Docker Hub
+        if: github.ref == 'refs/heads/main' # Ensure publishing happens only on the main branch
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}  # DockerHub username
           password: ${{ secrets.DOCKER_API_KEY }} # DockerHub API key (used as password)
-
       - name: 📦 Build and Push Docker Image
-        #        if: github.ref == 'refs/heads/main' # Only publish Docker images on main branch
+        if: github.ref == 'refs/heads/main' # Ensure publishing happens only on the main branch
         uses: docker/build-push-action@v6
         with:
           push: true
           tags: |
-            haimkastner/connectivity-tool:1.0.4
+            haimkastner/connectivity-tool:${{ steps.update_version.outputs.VERSION }}
             haimkastner/connectivity-tool:latest
           context: .
 
