--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,9 @@ on:
   # Trigger workflow on push or manual dispatch 🎯
   [ push, workflow_dispatch ]
 
+env:
+  BUILD_JOB_ID: ${{ github.run_id }} # GitHub run ID
+
 jobs:
   build:
     runs-on: ubuntu-latest # 🌐 Use the latest Ubuntu image for this job
@@ -21,19 +24,19 @@ jobs:
 
       # Step 3️⃣: Install dependencies and build 🔨
       - name: 🏗️ Build Project
-        env:
-          BUILD_JOB_ID: ${{ github.run_id }} # GitHub run ID
         run: |
           echo "Installing dependencies 📦..."
           pip install -r requirements.txt
           echo "Installing the connectivity tool 🚀..."
           pip install .
 
+
       # Step 4️⃣: Run unit tests 🧪
       - name: 🧹 Test Units
         run: |
           echo "Running tests 🔍..."
           python -m unittest discover tests
+
 
       # Step 5️⃣: Bump the version automatically 🔄
       - name: 🔼 Bump Version
@@ -49,7 +52,6 @@ jobs:
           echo "Updating setup.py with version: $NEXT_VERSION ✨..."
           sed -i "s/version = '.*'/version = '$NEXT_VERSION'/g" setup.py
           echo "VERSION=$NEXT_VERSION" >> $GITHUB_OUTPUT
-          README_CONTENT=
           
 
       # Step 6️⃣: Retrieve version info for release notes 📜
@@ -59,6 +61,7 @@ jobs:
           echo "Extracting commit message for release notes 🗒️..."
           body=$(git log -1 --pretty=%B | sed -n '1p')
           echo "BODY=$body" >> $GITHUB_OUTPUT
+
 
       # Step 7️⃣: Commit and push the new version 🖊️
       - name: 💾 Commit and Push Version
@@ -73,15 +76,16 @@ jobs:
         if: github.ref == 'refs/heads/main' # Ensure publishing happens only on the main branch
         env:
           API_KEY: '${{ secrets.PIP_API_KEY }}' # PyPI token for authentication 🔑
-          BUILD_JOB_ID: ${{ github.run_id }} # GitHub run ID
         run: |
+          export BUILD_JOB_ID=$BUILD_JOB_ID
           echo "Publishing package to PyPI 🐍..."
           pip install twine
           python setup.py sdist
           twine upload dist/* -u __token__ -p $API_KEY
 
+
       # Step 9️⃣: Build and Publish Docker Image 🐳
-      - name: Login to Docker Hub
+      - name: 🔑 Log in to Docker Hub 🐳
         if: github.ref == 'refs/heads/main' # Ensure publishing happens only on the main branch
         uses: docker/login-action@v3
         with:
@@ -90,16 +94,27 @@ jobs:
       - name: 📦 Build and Push Docker Image
         if: github.ref == 'refs/heads/main' # Ensure publishing happens only on the main branch
         uses: docker/build-push-action@v6
-        env:
-          BUILD_JOB_ID: ${{ github.run_id }} # GitHub run ID
         with:
           push: true
           context: .
-          labels: |
-            description=${{ $(cat ./README.md) }}
           tags: |
             haimkastner/connectivity-tool:${{ steps.update_version.outputs.VERSION }}
             haimkastner/connectivity-tool:latest
+
+      - name: 📖 Read README.md and Update Docker Hub Description
+        run: |
+          # Read the README.md content and trim to a manageable size if needed
+          README_CONTENT=$(cat DOCKER.md)
+        
+          # Escape content (handling special characters)
+          ESCAPED_CONTENT=$(echo "$README_CONTENT" | jq -Rs .)
+
+          # Update Docker Hub repository description using Docker Hub API
+          curl -X PUT "https://hub.docker.com/v2/repositories/haimkastner/connectivity-tool/" \
+            -H "Authorization: Bearer ${{ secrets.DOCKER_API_KEY }}" \
+            -H "Content-Type: application/json" \
+            -d "{\"description\": $ESCAPED_CONTENT}"
+
 
       # Step 🔟: Create a GitHub release 🌟
       - name: 🏷️ Create Release
