--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,9 +4,6 @@ on:
   # Trigger workflow on push or manual dispatch 🎯
   [ push, workflow_dispatch ]
 
-env:
-  BUILD_JOB_ID: ${{ github.run_id }} # GitHub run ID
-
 jobs:
   build:
     runs-on: ubuntu-latest # 🌐 Use the latest Ubuntu image for this job
@@ -29,6 +26,8 @@ jobs:
           pip install -r requirements.txt
           echo "Installing the connectivity tool 🚀..."
           pip install .
+          echo "showing the installed packages"
+          connectivity_tool -i
 
 
       # Step 4️⃣: Run unit tests 🧪
@@ -52,7 +51,7 @@ jobs:
           echo "Updating setup.py with version: $NEXT_VERSION ✨..."
           sed -i "s/version = '.*'/version = '$NEXT_VERSION'/g" setup.py
           echo "VERSION=$NEXT_VERSION" >> $GITHUB_OUTPUT
-          
+      
 
       # Step 6️⃣: Retrieve version info for release notes 📜
       - name: 📝 Get Version Info
@@ -77,12 +76,11 @@ jobs:
         env:
           API_KEY: '${{ secrets.PIP_API_KEY }}' # PyPI token for authentication 🔑
         run: |
-          export BUILD_JOB_ID=$BUILD_JOB_ID
           echo "Publishing package to PyPI 🐍..."
           pip install twine
           python setup.py sdist
           twine upload dist/* -u __token__ -p $API_KEY
-
+      
 
       # Step 9️⃣: Build and Publish Docker Image 🐳
       - name: 🔑 Log in to Docker Hub 🐳
@@ -100,21 +98,9 @@ jobs:
           tags: |
             haimkastner/connectivity-tool:${{ steps.update_version.outputs.VERSION }}
             haimkastner/connectivity-tool:latest
-
-      - name: 📖 Read README.md and Update Docker Hub Description
-        run: |
-          # Read the README.md content and trim to a manageable size if needed
-          README_CONTENT=$(cat DOCKER.md)
-        
-          # Escape content (handling special characters)
-          ESCAPED_CONTENT=$(echo "$README_CONTENT" | jq -Rs .)
-
-          # Update Docker Hub repository description using Docker Hub API
-          curl -X PUT "https://hub.docker.com/v2/repositories/haimkastner/connectivity-tool/" \
-            -H "Authorization: Bearer ${{ secrets.DOCKER_API_KEY }}" \
-            -H "Content-Type: application/json" \
-            -d "{\"description\": $ESCAPED_CONTENT}"
-
+          labels: |
+            org.opencontainers.image.description=$(cat DOCKER.md)
+            org.opencontainers.image.authors="Haim Kastner"
 
       # Step 🔟: Create a GitHub release 🌟
       - name: 🏷️ Create Release
